--- a/_posts/2012-11-19-pondering-urban-soil.html
+++ b/_posts/2012-11-19-pondering-urban-soil.html
@@ -11,7 +11,7 @@ tags: [brown]
 <p>I remember being shocked last year when reading the Scientific American article looking into <strong>wind-borne dust</strong> – there’s research into how dust alters mineral content in both soil and water environments, altering the growth of plants and microbes (and thus the resulting food webs) respectively. Influencing weather formations and altering the landscape, <strong>estimates of the quantity of dust moving around are enormous</strong> (e.g.<em> 64 million tons of particulates estimated to fall over North America alone! Stats and info of which can be found on <a href="httpss://www.nasa.gov/topics/earth/features/dust-imports.html" target="_blank">NASA’s website</a></em>). Somehow this huge shifting of nutrients above our heads had completely eluded my notice – yet it’s huge for ecology. Massive. (Really. But perhaps I’ll go into this later)</p>
 <br>
 <figure style="text-align:center;">
-  <img src="{{ site.baseurl }}/assets/images/wind-dust.jpg" height="347" width="522" />
+  <img src="/assets/images/wind-dust.jpg" height="347" width="522" />
 </figure>
 </br>
 <p>Dwelling on this is of course a precursor to the real excitement.</p>
@@ -20,13 +20,13 @@ tags: [brown]
 <p>But to be more specific, a nice little paper I found back from 2009 entitled ‘<a href="httpss://www.sciencedirect.com/science/article/pii/S0169204608001710#" target="_blank"><strong>The anthropogenic sealing of soils in urban areas’.</strong></a></p>
 <br>
 <figure style="text-align:center;">
-  <img src="{{ site.baseurl }}/assets/images/img_20121119_1428031.jpg" height="347" width="347" />
+  <img src="/assets/images/img_20121119_1428031.jpg" height="347" width="347" />
 </figure>
 </br>
 <p>This pondering all began in a somewhat critical appraisal of<strong> trees in the city</strong>. I had been wondering how they lived for quite a while – with no extra fertiliser added, with roots almost certainly limited in their growth length, how do trees survive? Surely the sparse amount of rain they can soak up in an urban environment isn’t enough to sustain the <strong>water-hungry beasts</strong>?</p>
 <br>
 <figure style="text-align:center;">
-  <img src="{{ site.baseurl }}/assets/images/img_20121119_143732.jpg" height="347" width="347" />
+  <img src="/assets/images/img_20121119_143732.jpg" height="347" width="347" />
 </figure>
 </br>
 <p><strong>In 2030 <a href="httpss://www.sciencedirect.com/science/article/pii/S0160412008000858" target="_blank">50.7-86.7%</a> of the total population in Africa and Northern America is expected to live in urban areas – The effect of soil sealing for this is as yet unknown</strong>. In a <a href="https://www.sciencedirect.com/science/article/pii/S0269749111005719" target="_blank">Feb 2012 study </a>the effect of urbanisation on soil invertebrates was looked into, finding that the<strong> abundance and diversity of soil species was decreased with decreasing organic content, water content and <a href="https://www.sciencedirect.com/science/article/pii/S0048969709011115" target="_blank">increasing metal</a> (Cu, Pb, Zn) concentrations.</strong></p>
@@ -34,7 +34,7 @@ tags: [brown]
 <p><strong>Urban soil sealing</strong> – which we define in general as a thin layer of soil limiting infiltration and causing impermeability, can be caused by <strong>soil structure loss, colloid dispersal</strong> (i.e. changing the multi-phase system of soil from its usually soil particle, gas and water system) and <strong>compaction</strong>. The most affective sealing however, rather than that of compaction caused by agro-forestry or similar is <strong>artificial soil sealing</strong>.</p>
 <br>
 <figure style="text-align:center;">
-  <img src="{{ site.baseurl }}/assets/images/img_20121119_144848.jpg" height="347" width="347" />
+  <img src="/assets/images/img_20121119_144848.jpg" height="347" width="347" />
 </figure>
 </br>
 <p>With <strong>over ¾ of the European population living within cities</strong>, we create distinct patches of “<strong>soil segregation</strong>”: patches of land which have decreased water permeability, biodiversity&amp; ability to act as a <em>carbon sink</em>. The influence of this is as yet an untapped research potential.</p>
@@ -43,13 +43,13 @@ tags: [brown]
 <p>To add to this, while small, the shift in temperature alters the species flourishing within city walls. How this affects the biota and microbe life as opposed to rural is equally an intriguing trail of thought.</p>
 <br>
 <figure style="text-align:center;">
-  <img src="{{ site.baseurl }}/assets/images/san-diego-pelicans-birds-city-skyline-water_w725_h544.jpg" height="392" width="522" />
+  <img src="/assets/images/san-diego-pelicans-birds-city-skyline-water_w725_h544.jpg" height="392" width="522" />
 </figure>
 </br>
 <p>In contrast to temperature (faster reactions), lower water tables result in lower chemical reaction rates in soil. This water loss results from the obvious city impermeability, but perhaps more importantly as a consequence of increased water runoff to surrounding unsealed areas. ~ Even high rainfall doesn’t ensure a comfortable water budget. A great illustration is the doubling of Liepzig’s surface runoff between 1940-2003 due to increased surfacing. As well as creating high sewage-system pressure, increased pollutant runoff and risks of flooding, the change in water pH and salinity can have extensive impact on biota.</p>
 <br>
 <figure style="text-align:center;">
-  <img src="{{ site.baseurl }}/assets/images/img_20121119_145838.jpg" height="347" width="347" />
+  <img src="/assets/images/img_20121119_145838.jpg" height="347" width="347" />
 </figure>
 </br>
 <p>Ultimately my original pondering of tree-related thirst is a bit of a chasm in media attention and solutions. The effect of urban environments on our surroundings is clear &amp; distinct from the start – <strong>decreased mammal species, extinction of local plants and animals &amp; the requirement for animals to either adapt or die.</strong></p>
