--- a/_posts/2013-06-14-endorphins-how-crucial-are-they.html
+++ b/_posts/2013-06-14-endorphins-how-crucial-are-they.html
@@ -11,7 +11,7 @@ tags: [grey, black]
 <p>Some of the biggest crimes committed today are hacking-related. Even this morning some of us Londoners picked up the Metro to find ‘radical Yorkshire lad hacking NHS, Sony and New International, digitally masquerading as a 16-year old girl’. Hardly surprising given the propensity for young people nowadays to engage in elaborate cross-gender identities (don’t scoff, we’re parodying a very different newspaper with that phrase), but it begs the question: Why do people do it at all? Why do they hack, commit criminal offences and risk a career-damaging spell in prison? Even the best of the hacking media darlings get a few hard knocks: Julian Assange’s media circus being one prime deterrent for even the “good” hacking in releasing classified government documents.</p>
 <br>
 <figure style="text-align:center;">
-  <img src="{{ site.baseurl }}/assets/images/8385591214_600cb9598d_o.jpg" width="567" height="378" />
+  <img src="/assets/images/8385591214_600cb9598d_o.jpg" width="567" height="378" />
 </figure>
 </br>
 <p>One hacking legend Kevin Mitnick explains it as akin to the convivial digital warfare: “I did get a huge endorphin rush when I was able to crack a system because it was like a video game”. Equally however, having retired from crime he notes that “I get the same endorphin rush today when I get into a client's system. I really feel good about it. So I get paid for what I did illegally years ago”. Do we gather from this that it isn’t the criminality that draws hacksters-to-be, but endorphins? The challenge of the chase? – What in general causes an endorphin release?</p>
@@ -21,7 +21,7 @@ tags: [grey, black]
 <br>
 <figure style="text-align:center;">
   <a href="https://commons.wikimedia.org/wiki/File:LocationOfHypothalamus.jpg">
-    <img src="{{ site.baseurl }}/assets/images/locationofhypothalamus.jpg" width="350" height="250" /></a>
+    <img src="/assets/images/locationofhypothalamus.jpg" width="350" height="250" /></a>
 </figure>
 </br>
 <p>As all who have been either willingly or forcibly ensconced into watching Legally Blonde will know, “Exercise produces endorphins; endorphins make you happy. Happy people don't shoot their husbands”: right? Perhaps – but how certain are we?</p>
@@ -30,7 +30,7 @@ tags: [grey, black]
 <br>
 <figure style="text-align:center;">
   <a href="https://www.flickr.com/photos/rveldwijk/2907506894/">
-    <img src="{{ site.baseurl }}/assets/images/2907506894_e1aea368bf_o.jpg" width="441" height="662" /></a>
+    <img src="/assets/images/2907506894_e1aea368bf_o.jpg" width="441" height="662" /></a>
     <figcaption>Photo by Robbie Veldwijk, click for flickr link <figcaption>
 </figure>
 </br>
@@ -40,7 +40,7 @@ tags: [grey, black]
 <br>
 <figure style="text-align:center;">
   <a href="https://www.flickr.com/photos/sequitography/2605051579/">
-    <img src="{{ site.baseurl }}/assets/images/2605051579_cfc36c9b43_z.jpg" width="630" height="472" /></a>
+    <img src="/assets/images/2605051579_cfc36c9b43_z.jpg" width="630" height="472" /></a>
     <figcaption>Fantastic disguise by Seth Thomas Rasmussen :)</figcaption>
 </figure>
 </br>
