--- a/_posts/2013-08-14-frack-off-indeed.html
+++ b/_posts/2013-08-14-frack-off-indeed.html
@@ -10,7 +10,7 @@ tags: [green, red]
 <br>
 <figure style="text-align:center;">
   <a href="https://commons.wikimedia.org/wiki/File:Hydraulic_Fracturing_Marcellus_Shale.jpg">
-    <img alt="Hydraulic fracturing operation at a Marcellus Shale well Visit for more photos: https://energy.usgs.gov/GeneralInfo/HelpfulResources/MultimediaGallery/HydraulicFracturingGallery.aspx" src="{{ site.baseurl }}/assets/images/hydraulic_fracturing_marcellus_shale.jpg" width="630" height="354" /></a>
+    <img alt="Hydraulic fracturing operation at a Marcellus Shale well Visit for more photos: https://energy.usgs.gov/GeneralInfo/HelpfulResources/MultimediaGallery/HydraulicFracturingGallery.aspx" src="/assets/images/hydraulic_fracturing_marcellus_shale.jpg" width="630" height="354" /></a>
     <figcaption> Hydraulic fracturing operation at a Marcellus Shale well </figcaption>
 </figure>
 </br>
