--- a/_posts/2013-10-05-the-city-never-sleeps-but-we-need-to.html
+++ b/_posts/2013-10-05-the-city-never-sleeps-but-we-need-to.html
@@ -11,7 +11,7 @@ tags: [red, black]
 <br>
 <figure style="text-align:center;">
   <a href="https://nendotan.deviantart.com/art/The-Crime-never-sleep-I-do-295428361">
-    <img src="{{ site.baseurl }}/assets/images/the_crime_never_sleep__i_do_by_darkm4g-d4vw1zd.jpg" width="504" height="335" /></a>
+    <img src="/assets/images/the_crime_never_sleep__i_do_by_darkm4g-d4vw1zd.jpg" width="504" height="335" /></a>
     <figcaption> Photo by Nendotan, DeviantArt </figcaption>
 <figure>
 </br>
@@ -22,7 +22,7 @@ tags: [red, black]
 <br>
 <figure style="text-align:center;">
   <a href="https://www.flickr.com/photos/schani/43305287/">
-    <img src="{{ site.baseurl }}/assets/images/43305287_2d7c4a6f43_b.jpg" width="567" height="375" /></a>
+    <img src="/assets/images/43305287_2d7c4a6f43_b.jpg" width="567" height="375" /></a>
     <figcaption>Photo by Michael Czeiszperger</figcaption>
 </figure>
 </br>
