--- a/_posts/2013-10-07-building-sustainability.html
+++ b/_posts/2013-10-07-building-sustainability.html
@@ -11,7 +11,7 @@ tags: [white, brown]
 <p>Taking the example of <a href="https://www.ted.com/talks/edi_rama_take_back_your_city_with_paint.html">Tirana in Albania,</a> we find that transforming a city into one with beautiful public spaces and colourful designs reduces corruption substantially. Aesthetics – or even more fundamentally intelligent, purposeful design of our surroundings is starting to create stronger emotional connections. <a href="https://www.ted.com/talks/shigeru_ban_emergency_shelters_made_from_paper.html">Incredible buildings constructed from thick paper </a>created by <a href="https://www.shigerubanarchitects.com/works.html">architect Shigeru Ban </a>have acted as temporary structures ranging from environmental-disaster shelters to vast churches, to the second Pompidou Centre in France. Architect <a href="https://www.ted.com/talks/michael_green_why_we_should_build_wooden_skyscrapers.html">Michael Green constructs with wood</a> – finding that not only does it give us the ability to lower our carbon footprint, but people are happier and literally embrace how wood gives nature’s fingerprint to our environ. We’ve started to shift from seeing beauty as more of a stylistic mark to one combined with innovation – we want our buildings to reflect us, and thankfully, environmentally friendly architecture is growing on the agenda. With steel and concrete being the main components of current construction, they contribute 8% to total greenhouse gases, and the building industry itself almost half the total. Building from sustainable sources enables our houses to act as a carbon sink. It enables us to feel more, with our habitat forming the zeitgeist of our modern age.</p>
 <br>
 <figure style="text-align:center;">
-  <img alt="Paper Architecture by Shigeru Ban" src="{{ site.baseurl }}/assets/images/pdt_03.jpg" width="400" height="268" />
+  <img alt="Paper Architecture by Shigeru Ban" src="/assets/images/pdt_03.jpg" width="400" height="268" />
   <figcaption> Paper Architecture by Shigeru Ban </figcaption>
 </figure>
 </br>
@@ -19,7 +19,7 @@ tags: [white, brown]
 <br>
 <figure style="text-align:center;">
   <a href="https://inhabitat.com/incredible-pompidou-metz-art-museum-rises-in-france/arialview2/">
-    <img alt="Timber interlocking roof by Shigeru Ban" src="{{ site.baseurl }}/assets/images/5631311928_742b6db985_o.jpg" width="567" height="357" /></a>
+    <img alt="Timber interlocking roof by Shigeru Ban" src="/assets/images/5631311928_742b6db985_o.jpg" width="567" height="357" /></a>
     <figcaption> Timber interlocking roof by Shigeru Ban </figcaption>
 </figure>
 </br>
