--- a/_posts/2013-10-23-if-you-break-it-you-buy-it.html
+++ b/_posts/2013-10-23-if-you-break-it-you-buy-it.html
@@ -28,7 +28,7 @@ tags: [green, brown]
 <p>It might look bleak, and indeed in a world of climate <b>in-activists</b> it would be. Our financial system depends upon investments such as energy, with capitol (our pensions, basically) ‘locked up’ in the reserves energy companies have valuations for in the form of fossil fuels. Completely stopping extraction could trigger a global financial crisis losing around $4 trillion worth of shares that could make our current depression seem like a sucker punch before buckling in the boxing ring. - But all is not lost. Pressure on governments to invest further in renewables, along with increased research and career investment by people such as yourselves into clean energy may yet turn the tide. We need to act in unison to mitigate a disaster that would ruin food production, bring poverty, death and impede the progress of developing countries. We need to funnel our efforts – we can’t just give in to the <a href="https://www.theguardian.com/environment/2013/oct/04/global-warming-sceptics-discredit-ipcc?CMP=twt_gu">bribing, the bullying and the childish denial</a> our government hold in response to a human-made problem. Positive action, clear goals: not this hand-wringing and headshaking.</p>
 <br>
 <figure style="text-align:center;">
-  <img alt="Via https://www.flickr.com/people/grantneufeld/" src="{{ site.baseurl }}/assets/images/412225441_e2b83dab88_o.jpg" width="530" height="238" />
+  <img alt="Via https://www.flickr.com/people/grantneufeld/" src="/assets/images/412225441_e2b83dab88_o.jpg" width="530" height="238" />
 </figure>
 </br>
 <p style="text-align:left;">Quotes obtained via <a href="https://www.theguardian.com/environment/2013/sep/27/ipcc-climate-change-report-ar5-live-coverage">Guardian Live Updates</a></p>
