--- a/_posts/2012-10-23-finally-no-more-observation.html
+++ b/_posts/2012-10-23-finally-no-more-observation.html
@@ -8,7 +8,7 @@ tags: [green, brown]
 ---
 <br>
 <figure style="text-align:center;">
-  <img src="{{ site.baseurl }}/assets/images/img_21032.jpg" height="363" width="545" />
+  <img src="/assets/images/img_21032.jpg" height="363" width="545" />
 </figure>
 </br>
 <p>"The age of passive sponging is nigh!" -&gt; A cry I would thoroughly love heard resonated throughout cafes, campuses and offices.</p>
